# random-slugs

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  dev-requirements.txt  pyproject.toml
.github/: ci.yml
.github/workflows/: build-lint-and-test.yml  ci.yml  lint-pr-title.yml  release.yml
random_slugs/: __init__.py  generate.py  words.py
randomslugs/: generate.py  words.py
tests/: test_generate.py
