[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "Fabio Kapsahili", email = "fabio.kapsahili@protonmail.com"}]
description = "A Python package for generating random slugs using a customizable vocabulary of words."
equires-python = ">=3.8"
keywords = ["sample", "setuptools", "development"]
license = {file = "LICENSE.txt"}
maintainers = [
  {name = "Fabio Kapsahili", email = "fabio.kapsahili@protonmail.com"},
]
name = "random-slugs"
readme = "README.md"
version = "1.0.0"

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["peppercorn"]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Bug Reports" = "https://github.com/fkapsahili/random-slugs/issues"
"Homepage" = "https://github.com/fkapsahili/random-slugs"
"Source" = "https://github.com/fkapsahili/random-slugs/"

[tool.hatch]
package-data = {"random-slugs" = ["*.txt"]}

[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
test = "pytest"

[tool.hatch.envs.lint]
dependencies = [
  "ruff",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check ."

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "DEBUG"
